# Ohh-my-excel

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  pyproject.toml
.github/: copilot-instructions.md  ohh-my-excel.instruction.md
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-05-15-phase1-core-parser-graph.md
excel_graph_mcp/: __init__.py  analysis.py  changes.py  cli.py  communities.py  constants.py  dependency.py  embeddings.py  exports.py  flows.py  formula_parser.py  generation.py  graph.py  hyperformula_bridge.py  incremental.py  main.py  parser.py  templates.py  vba_analysis.py
excel_graph_mcp/tools/: _common.py  build.py  context.py  query.py
tests/: test_analysis.py  test_cli.py  test_communities.py  test_dependency.py  test_embeddings.py  test_exports.py  test_flows.py  test_formula_parser.py  test_generation.py  test_graph.py  test_hyperformula.py  test_incremental.py  test_main.py  test_parser.py  test_templates.py  test_tools.py  test_vba.py
tests/fixtures/: cross_sheet.xlsx  generate_fixtures.py  simple.xlsx  with_tables.xlsx
